feat: Replace Fax with Send & Share feature + update domain to zenigh.online
## Feature Changes
- Replaced Fax feature with Send & Share (email, WhatsApp, Zeni link)
- New SendScreen.tsx and SendShareScreen.tsx
- Share permissions: view only or download
- Password protection and expiry options for shared links
- Removed FaxScreen.tsx, FaxSendScreen.tsx, and faxService.ts

## Domain Updates
- Updated all references from zeni.app to zenigh.online
- Updated support email to support@zenigh.online
- Updated deep linking prefixes

## Files Updated
- 25+ screens and components updated
- Types: FaxJob → ShareJob, FaxStatus → ShareStatus
- Store: useFaxStore → useShareStore
- AI service updated with share actions

--- a/website/contact.html
+++ b/website/contact.html
@@ -251,7 +251,7 @@
                     </div>
                     <div class="faq-card">
                         <h3>Can I use Zeni offline?</h3>
-                        <p>Yes! Most features work offline including scanning, organizing, and viewing documents. AI features and faxing require an internet connection.</p>
+                        <p>Yes! Most features work offline including scanning, organizing, and viewing documents. AI features and sharing require an internet connection.</p>
                     </div>
                     <div class="faq-card">
                         <h3>How do I report a bug?</h3>
