--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     
-    <link rel="stylesheet" href="styles.css?v=18">
+    <link rel="stylesheet" href="styles.css?v=19">
 </head>
 <body>
     <!-- Navigation -->
@@ -266,7 +266,7 @@
                                 </div>
                                 <div class="share-link-content">
                                     <span class="share-link-label">Share Link</span>
-                                    <span class="share-link-url" id="shareUrl">zeni.app/s/abc123</span>
+                                    <span class="share-link-url" id="shareUrl">zenigh.online/s/abc123</span>
                                 </div>
                                 <div class="share-copy-btn" id="shareCopyBtn">
                                     <ion-icon name="copy-outline" id="copyIcon"></ion-icon>
@@ -374,7 +374,7 @@
                     </div>
                     <div class="step-content">
                         <h3>Edit, organize, share</h3>
-                        <p>Your document is ready. Edit, convert, fax, or share it anywhere you need.</p>
+                        <p>Your document is ready. Edit, convert, or share it anywhere you need.</p>
                     </div>
                 </div>
             </div>
@@ -473,7 +473,7 @@
                         <ion-icon name="star"></ion-icon>
                         <ion-icon name="star"></ion-icon>
                     </div>
-                    <p class="testimonial-text">"Finally, a document app that doesn't bombard me with ads! The fax feature helped me submit my internship documents without any hassle. Clean, fast, and actually useful."</p>
+                    <p class="testimonial-text">"Finally, a document app that doesn't bombard me with ads! The share feature helped me submit my internship documents without any hassle. Clean, fast, and actually useful."</p>
                     <div class="testimonial-author">
                         <div class="author-avatar">KO</div>
                         <div class="author-info">
@@ -530,7 +530,7 @@
                         <ion-icon name="chevron-down-outline" class="faq-icon"></ion-icon>
                     </button>
                     <div class="faq-answer">
-                        <p>Absolutely! You can scan, edit, and organize documents without an internet connection. Only features like cloud sync, faxing, and AI assistance require connectivity.</p>
+                        <p>Absolutely! You can scan, edit, and organize documents without an internet connection. Only features like cloud sync, sharing, and AI assistance require connectivity.</p>
                     </div>
                 </div>
 
@@ -556,11 +556,11 @@
 
                 <div class="faq-item">
                     <button class="faq-question">
-                        <span>Can I fax documents internationally?</span>
+                        <span>How does document sharing work?</span>
                         <ion-icon name="chevron-down-outline" class="faq-icon"></ion-icon>
                     </button>
                     <div class="faq-answer">
-                        <p>Yes! Zeni supports faxing to over 100 countries worldwide. Perfect for sending official documents to embassies, universities, or businesses abroad.</p>
+                        <p>Share documents via email, WhatsApp, or a Zeni link. Recipients get a beautiful preview page to view, download, or edit based on the permissions you set.</p>
                     </div>
                 </div>
             </div>
@@ -615,7 +615,7 @@
                     <a href="#" class="logo">
                         <span class="logo-z">Z</span><span class="logo-eni">eni</span>
                     </a>
-                    <p>Smart document workspace for students. Scan, edit, convert, and fax—all in one app.</p>
+                    <p>Smart document workspace for students. Scan, edit, convert, and share—all in one app.</p>
                 </div>
                 <div class="footer-links">
                     <div class="footer-col">
