--- a/website/privacy.html
+++ b/website/privacy.html
@@ -196,7 +196,7 @@
                 <ul>
                     <li>Provide, maintain, and improve our Service</li>
                     <li>Create and manage your account</li>
-                    <li>Process fax transactions when you use our fax service</li>
+                    <li>Process sharing transactions when you use our share feature</li>
                     <li>Provide AI-powered features when you explicitly request them</li>
                     <li>Send important notifications about your account or the Service</li>
                     <li>Respond to your comments, questions, and support requests</li>
@@ -216,7 +216,7 @@
                 <h2>5. Data Sharing and Disclosure</h2>
                 <p>We do not sell your personal information. We may share information in the following circumstances:</p>
                 <ul>
-                    <li><strong>Service Providers:</strong> Third-party vendors who help us operate our Service (e.g., fax delivery, payment processing).</li>
+                    <li><strong>Service Providers:</strong> Third-party vendors who help us operate our Service (e.g., document sharing, payment processing).</li>
                     <li><strong>Legal Requirements:</strong> When required by law or to respond to legal process.</li>
                     <li><strong>Protection:</strong> To protect the rights, privacy, safety, or property of Zeni, our users, or the public.</li>
                     <li><strong>Business Transfers:</strong> In connection with a merger, acquisition, or sale of assets.</li>
@@ -237,7 +237,7 @@
                 <p>Our Service may integrate with third-party services:</p>
                 <ul>
                     <li><strong>AI Services:</strong> When you use AI features, document text may be processed by our AI providers. This is opt-in and occurs only when you explicitly request AI assistance.</li>
-                    <li><strong>Fax Services:</strong> When sending faxes, recipient information and document contents are transmitted to our fax service provider.</li>
+                    <li><strong>Share Services:</strong> When sharing documents, recipient information and document contents may be transmitted securely to enable sharing.</li>
                     <li><strong>Analytics:</strong> We use privacy-friendly analytics to understand app usage.</li>
                 </ul>
 
