--- a/website/terms.html
+++ b/website/terms.html
@@ -189,7 +189,7 @@
                     <li>Document scanning and image capture</li>
                     <li>PDF editing and annotation tools</li>
                     <li>Document conversion between formats</li>
-                    <li>Fax sending capabilities</li>
+                    <li>Document sharing capabilities</li>
                     <li>AI-powered document assistance</li>
                     <li>Document organization and storage</li>
                 </ul>
@@ -220,7 +220,7 @@
                     <li>Violate any applicable laws or regulations</li>
                     <li>Infringe on intellectual property rights of others</li>
                     <li>Transmit illegal, harmful, or fraudulent content</li>
-                    <li>Send unsolicited faxes or spam</li>
+                    <li>Send unsolicited messages or spam</li>
                     <li>Impersonate others or misrepresent your identity</li>
                     <li>Attempt to gain unauthorized access to our systems</li>
                     <li>Interfere with or disrupt the Service</li>
@@ -232,18 +232,18 @@
                     <p><strong>Warning:</strong> Violation of these terms may result in immediate termination of your account and potential legal action.</p>
                 </div>
 
-                <h2>5. Paid Services and Fax Credits</h2>
+                <h2>5. Paid Services and Premium Features</h2>
                 
-                <h3>5.1 Fax Services</h3>
-                <p>The fax service requires credits or payment. By using the fax feature, you agree to:</p>
+                <h3>5.1 Sharing Features</h3>
+                <p>Some sharing features may require premium access. By using these features, you agree to:</p>
                 <ul>
-                    <li>Pay all applicable fees for fax transmissions</li>
-                    <li>Comply with all applicable fax laws and regulations</li>
-                    <li>Only send faxes to recipients who have consented or have a legitimate business relationship</li>
+                    <li>Pay all applicable fees for premium features</li>
+                    <li>Comply with all applicable laws and regulations</li>
+                    <li>Only share documents with recipients who have consented or have a legitimate need</li>
                 </ul>
 
                 <h3>5.2 Payments and Refunds</h3>
-                <p>All payments are processed securely. Refunds for unused fax credits may be requested within 30 days of purchase. Successfully delivered faxes are non-refundable.</p>
+                <p>All payments are processed securely. Refunds for unused premium credits may be requested within 30 days of purchase.</p>
 
                 <h3>5.3 Premium Features</h3>
                 <p>Some features may require a subscription. Subscription terms, pricing, and cancellation policies will be clearly displayed before purchase.</p>
@@ -273,8 +273,8 @@
                 <h3>9.1 "As Is" Service</h3>
                 <p>THE SERVICE IS PROVIDED "AS IS" AND "AS AVAILABLE" WITHOUT WARRANTIES OF ANY KIND, EXPRESS OR IMPLIED. WE DO NOT WARRANT THAT THE SERVICE WILL BE UNINTERRUPTED, ERROR-FREE, OR SECURE.</p>
 
-                <h3>9.2 Fax Delivery</h3>
-                <p>While we strive for reliable fax delivery, we cannot guarantee delivery to all destinations. Failed fax attempts may be retried, and you will be notified of delivery status.</p>
+                <h3>9.2 Document Delivery</h3>
+                <p>While we strive for reliable document delivery and sharing, we cannot guarantee delivery to all recipients. You will be notified of delivery status.</p>
 
                 <h3>9.3 Document Accuracy</h3>
                 <p>Scanning and conversion features aim to produce accurate results but may not be perfect. Always verify important documents before use.</p>
@@ -285,7 +285,7 @@
                     <li>Loss of data or documents</li>
                     <li>Loss of business or profits</li>
                     <li>Damage resulting from unauthorized access to your account</li>
-                    <li>Errors in fax transmission or delivery</li>
+                    <li>Errors in document sharing or delivery</li>
                     <li>Any other damages arising from your use of the Service</li>
                 </ul>
                 <p>OUR TOTAL LIABILITY SHALL NOT EXCEED THE AMOUNT YOU PAID US IN THE TWELVE (12) MONTHS PRECEDING THE CLAIM.</p>
