Add full footers to all website pages and pull-to-refresh for app screens
Website:
- Added consistent full footer with brand, navigation links, and social icons to contact, careers, privacy, and terms pages
- Added scroll-to-top on page refresh

App:
- Added pull-to-refresh functionality to HomeScreen, DocumentsHubScreen, ActivityScreen, and ProfileScreen
- Scrolls to top and resets search on refresh

--- a/website/terms.html
+++ b/website/terms.html
@@ -336,11 +336,44 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-bottom" style="border-top: none; padding-top: 0;">
-                <p>© 2025 Zeni. Made with ❤️ in Ghana</p>
+            <div class="footer-main">
+                <div class="footer-brand">
+                    <a href="index.html" class="logo">
+                        <span class="logo-z">Z</span><span class="logo-eni">eni</span>
+                    </a>
+                    <p>Smart document workspace for students. Scan, edit, convert, and share—all in one app.</p>
+                </div>
+                <div class="footer-links">
+                    <div class="footer-col">
+                        <h4>Product</h4>
+                        <a href="index.html#features">Features</a>
+                        <a href="index.html#how-it-works">How it works</a>
+                        <a href="index.html#download">Download</a>
+                    </div>
+                    <div class="footer-col">
+                        <h4>Company</h4>
+                        <a href="contact.html">Contact</a>
+                        <a href="careers.html">Careers</a>
+                    </div>
+                    <div class="footer-col">
+                        <h4>Legal</h4>
+                        <a href="privacy.html">Privacy Policy</a>
+                        <a href="terms.html">Terms of Service</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>© 2025 Zeni. Made with <ion-icon name="heart" class="footer-heart"></ion-icon> in Ghana</p>
                 <div class="social-links">
-                    <a href="privacy.html">Privacy</a>
-                    <a href="terms.html">Terms</a>
+                    <a href="https://twitter.com/zaboraghana" aria-label="Twitter">
+                        <ion-icon name="logo-twitter" style="font-size: 20px;"></ion-icon>
+                    </a>
+                    <a href="https://instagram.com/zaboraghana" aria-label="Instagram">
+                        <ion-icon name="logo-instagram" style="font-size: 20px;"></ion-icon>
+                    </a>
+                    <a href="https://linkedin.com/company/zabora" aria-label="LinkedIn">
+                        <ion-icon name="logo-linkedin" style="font-size: 20px;"></ion-icon>
+                    </a>
                 </div>
             </div>
         </div>
