--- a/website/careers.html
+++ b/website/careers.html
@@ -144,8 +144,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="logo">
-                <img src="assets/icon.png" alt="Zeni" class="logo-img">
-                <span>Zeni</span>
+                <span class="logo-z">Z</span><span class="logo-eni">eni</span>
             </a>
             <div class="nav-links">
                 <a href="index.html#features">Features</a>
